# pico-rust-template

./: Cargo.toml
src/: main.rs
