[package]
name = "pico-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = "*"
cortex-m-rt = "*"
cortex-m = "*"
panic-halt = "*"
rp2040-boot2 = "*"
embedded-hal = "*"
embedded-time = "*"